<resources>
    <string name="app_name">ALC 4.0 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="title">Welcome to ALC 4.0 </string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="title_activity_my_profile">My Profile</string>

    <string name="my_name">Charity Wanjiru</string>
    <string name="my_track">Track: Android</string>
    <string name="my_email">Email: charitykahuria@gmail.com</string>
    <string name="my_phone_number">Phone number: +254707374981</string>
    <string name="my_slack_username">Slack Username: @Charity</string>
    <string name ="my_profile_pic">my profile picture</string>
    <string name="check_your_internet_connection">Error loading: check_your_internet_connection</string>
</resources>
